tests/NormalTests/paczka2/big_fuzzy/41104060.err
Error in line 2: o78Sc A963 17,9
Error in line 11: o78Sc AN5 111,0
Error in line 8: uFjDl8Zr7L S118 44,5
Error in line 15: 4cvCxBwCpG A25 61,1
Error in line 19: 4cvCxBwCpG S207 36,2
Error in line 37: ywZq S207 280,5
Error in line 24: 4cvCxBwCpG S118 94,3
Error in line 44: Hp8NeLTO S207 27,53
Error in line 43: Hp8NeLTO S207 13,4
Error in line 52: ywZq A963 68,4
Error in line 57: A963 S207 30,5
Error in line 63: A963 A25 26,9
Error in line 70: uFjDl8Zr7L A25 0,0
Error in line 74: ywZq SE07 56,E
Error in line 82: uFjDl8Zr7L S118 85,4
Error in line 75: o78Sc A25 95,7
Error in line 83: Hp8NeLTO S207 38,4
Error in line 108: ywZq A963 24,6
Error in line 111: ywZq A25 40,6
Error in line 113: A963 S207 59,8
Error in line 117: ywZq A963 32,0
Error in line 116: A963 S118 63,9
Error in line 104: uFjDl8Zr7L S118 59,2
Error in line 119: 4cvCxBwCpG S118 14,7
Error in line 123: uFjDl8Zr7L A963 35,8
Error in line 137: A963 S_07 78,3
Error in line 135: A963 S118 13,6
Error in line 149: ywZq A25 43,7
Error in line 155: Hp8NeLTO S118 89,9
Error in line 163: uFjDl8Zr7L A25 299,9
Error in line 169: o78Sc S118 51,1
Error in line 176: ywZq A25 71,2
Error in line 187: A963 S207 16,4
Error in line 192: A963 A963 94,9
Error in line 208: A963 A963 80,7
Error in line 228: uFjDl8Zr7L S118 56,6
Error in line 236: ywZq S118 858,7
Error in line 240: A963 S207 23,4
Error in line 243: A963 A963 55,9
